# eloquence-wizard

./: LICENSE  README.md  pyproject.toml
src/: conts.py
src/eloquencewizard/: app.py  app_types.py  constants.py  faq.py  proofread.py  providers.py  settings.py  sidebar.py  translation.py
src/eloquencewizard/components/: input_text.py
src/eloquencewizard/pages/: 1_faq.py  1_🌎_translation.py  2_👨🏽‍🔧_proofread.py
src/eloquencewizard/prompts/: proofread.py
